--- a/index.css
+++ b/index.css
@@ -5,7 +5,19 @@ h1 {
     width: 300px;
     height: 200px
 }
-
+.container_1 {
+    display: flex;
+    align-items: center;
+    }
+.container_2 {
+    display: flex;
+    align-items: center;
+    }
+.container_3 {
+    display: flex;
+    align-items: center;
+    }
 #red {
     color: red;
 }
+
