--- a/artist3.css
+++ b/artist3.css
@@ -9,9 +9,14 @@
     background-color: lightgreen;
   }
 
-  p#artist_name {
-    font-family: sans-serif;
-    font-size: 30px;
-    color: rgb(0, 0, 0)
-    font-weight: 400;
-  }
+p#artist_name {
+  font-family: sans-serif;
+  font-size: 30px;
+  color: rgb(0, 0, 0)
+}
+
+.member {
+  position: static;
+  top: 30px;
+  right:30px;
+}
