--- a/artist3.css
+++ b/artist3.css
@@ -1,22 +1,15 @@
-.float-container {
-    overflow: hidden;
-  }
-  
-  .float-item {
-    float: left;
-    margin: 10px;
-    padding: 20px;
-    background-color: lightgreen;
-  }
-
 p#artist_name {
   font-family: sans-serif;
-  font-size: 30px;
+  font-size: 40px;
+  font-weight: bold;
   color: rgb(0, 0, 0)
 }
 
 .member {
-  position: static;
-  top: 30px;
-  right:30px;
+  text-align: right;
+}
+
+.img {
+  width: 300px;
+  height: 200px;
 }
