--- a/index.css
+++ b/index.css
@@ -1,23 +1,22 @@
 h1 {
     color: blue;
 }
+h2 {
+    padding: 100px
+}
 .image {
     width: 300px;
-    height: 200px
+    height: 300px;
+    border-radius:200px;
 }
+li {
+    display: inline-block;
+    list-style: none;
+    font-size: 500px;
+    text-align: center
+}
+
 .container_1 {
     display: flex;
     align-items: center;
-    }
-.container_2 {
-    display: flex;
-    align-items: center;
-    }
-.container_3 {
-    display: flex;
-    align-items: center;
-    }
-#red {
-    color: red;
 }
-
