--- a/artist3.css
+++ b/artist3.css
@@ -6,10 +6,22 @@ p#artist_name {
 }
 
 .member {
-  text-align: right;
+  text-align: center;
+}
+
+.member > p {
+  font-size: 30px;
+}
+
+.feature {
+  text-align: center;
+}
+
+.feature > p {
+  font-size: 30;
 }
 
 .img {
-  width: 300px;
-  height: 200px;
+  width: 500px;
+  height: 350px;
 }
