--- a/artist3.css
+++ b/artist3.css
@@ -2,14 +2,15 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 header {
-  background-color: #333;
-  color: white;
+  background-color: #ffffff;
+  color: black;
   padding: 20px;
   text-align: left;
+  
 }
 
 header h1 {
@@ -19,11 +20,11 @@ header h1 {
 
 .container {
   display: flex;
-  width: 80%;
-  max-width: 1200px;
+  width: 90%;
+  max-width: 2000px;
   margin: 50px auto;
   background-color: #fff;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0);
 }
 
 .image-section {
@@ -33,9 +34,8 @@ header h1 {
 }
 
 .image-section img {
-  width: 100%;
-  height: auto;
-  max-width: 200px; /* 最大幅を指定 */
+  width: 350px;
+  height: 250px;
   border-radius: 10px;
 }
 
@@ -46,14 +46,14 @@ header h1 {
 
 .info-section h2 {
   border-bottom: 2px solid #333;
-  padding-bottom: 10px;
+  padding-bottom: 30px;
 }
 
 .info-section ul {
   list-style-type: disc;
-  padding-left: 20px;
+  padding-left: 30px;
 }
 
 .info-section p, .info-section ul {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
